--- a/clase 7-8-9/contactos.html
+++ b/clase 7-8-9/contactos.html
@@ -25,7 +25,7 @@
             <li><a href="nosotros.html">Nosotros</a></li>
             <li><a href="servicios.html">Servicios</a></li>
             <li><a class="activo" href="galeria.html">Galeria</a></li>
-            <li><a href="contacto.html">Contactos</a></li>
+            <li><a href="contactos.html">Contactos</a></li>
 
         </ul>
 
