--- a/clase 7-8-9/galeria.html
+++ b/clase 7-8-9/galeria.html
@@ -21,35 +21,19 @@
     </header>
     <nav>
         <ul class="holder">
-            <li><a class="activo" href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
             <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="galeria.html">Galeria</a></li>
-            <li><a href="contacto.html">Contactos</a></li>
+            <li><a class="activo"  href="galeria.html">Galeria</a></li>
+            <li><a href="contactos.html">Contactos</a></li>
 
         </ul>
 
     </nav>
     <main class="holder">
-<div>
-    <img src="img/home/img01.jpg" alt="avion">
-</div>
-<div class="columnas">
-    <section class="bienvenidos">
-        <h2>Bienvenidos</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nemo consequatur error dolorem dolore corporis suscipit reiciendis est iusto temporibus. Minus neque vel placeat delectus dolor adipisci accusantium culpa provident?</p>
-
-    </section>
-    <section class="Testimonios">
-        <h2>testimonios</h2>
-        <div class="testimonio">
-            <span class="cita">Simplemente excelente</span>
-            <span class="autor">Juan Gomez - zapatos.com</span>
-
-        </div>
-
-    </section>
-</div>
+<p>
+    pagina en construccion
+</p>
     </main>
     <footer>
 diseñado por Sebastian Nor
